add slashes list
